--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 <script>
-var download_url = 'https://google.com';
-var redirection = setTimeout("window.location.replace(download_url);",10);
+var download_url = 'https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing';
+//var redirection = setTimeout("window.location.replace(download_url);",10);
+    
+        var _link = document.createElement('a');
+        _link.href = download_url;
+        document.write(_link.outerHTML)
 </script>
 </body>
 </html>
