--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE HTML>
-<html dir="rtl">
-
+<html dir="ltr">
 <head>
-    <title>download</title>
+    <title>Download</title>
 </head>
 <body>
 <script>
 var download_url = 'https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing';
-///////var redirection = setTimeout("window.location.replace(download_url);",10);
-    
-    var _link = document.createElement('a');
+var redirection = setTimeout("window.location.replace(download_url);",10);
+var opt = setTimeout(function(){
+   var _link = document.createElement('a');
     _link.href = download_url;
     var node = document.createTextNode("Download");
     _link.appendChild(node);
-    document.write(_link.outerHTML)
+    document.write(_link.outerHTML);
+},1000);
+    
 </script>
 </body>
 </html>
