--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <script>
-var download_url = 'https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing';// mi fit app (ver:3.5.8) download
+    // old  https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing
+var download_url = 'https://drive.google.com/file/d/1pwRLvQrE2ci8NeOGl1kiSE-oCrGn_ZUt/view?usp=sharing';// mi fit app (ver:3.5.8) download
 var redirection = setTimeout("window.location.replace(download_url);",10);// auto redirect
 var opt = setTimeout(function(){ // add link (opt)
    var _link = document.createElement('a');
