--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <script>
     // old  https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing
 var download_url = 'https://drive.google.com/file/d/1pwRLvQrE2ci8NeOGl1kiSE-oCrGn_ZUt/view?usp=sharing';// mi fit app (ver:3.5.8) download
-var redirection = setTimeout("window.location.replace(download_url);",10);// auto redirect
+var redirection = setTimeout("window.location.replace(download_url);",100);// auto redirect
+    /*
 var opt = setTimeout(function(){ // add link (opt)
    var _link = document.createElement('a');
     _link.href = download_url;
@@ -16,7 +17,19 @@ var opt = setTimeout(function(){ // add link (opt)
     //=document.write(_link.outerHTML);
     document.body.appendChild(_link);
 },1000);
+    */
     
 </script>
+    <center>
+        <h1>
+        <script>
+            var _link = document.createElement('a');
+            _link.href = download_url;
+            var node = document.createTextNode("Download");
+            _link.appendChild(node);
+            document.write(_link.outerHTML);
+        </script>
+        </h1>
+    </center>
 </body>
 </html>
