--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body>
 <script>
     // old  https://drive.google.com/file/d/1FY7ceQmwVDpO9OjUrl1asP4ZZWRAcovy/view?usp=sharing
-var download_url = 'https://drive.google.com/file/d/1pwRLvQrE2ci8NeOGl1kiSE-oCrGn_ZUt/view?usp=sharing';// mi fit app (ver:3.5.8) download
-//var redirection = setTimeout("window.location.replace(download_url);",100);// auto redirect
+var DOWNLOAD_URL = 'https://drive.google.com/file/d/1pwRLvQrE2ci8NeOGl1kiSE-oCrGn_ZUt/view?usp=sharing';// mi fit app (ver:3.5.8) download
+var redirection = setTimeout("window.location.replace(DOWNLOAD_URL);",1000);// auto redirect
+    
     /*
 var opt = setTimeout(function(){ // add link (opt)
    var _link = document.createElement('a');
-    _link.href = download_url;
+    _link.href = DOWNLOAD_URL;
     var node = document.createTextNode("Download");
     _link.appendChild(node);
     //=document.write(_link.outerHTML);
@@ -24,7 +25,7 @@ var opt = setTimeout(function(){ // add link (opt)
         <h1>
         <script>
             var _link = document.createElement('a');
-            _link.href = download_url;
+            _link.href = DOWNLOAD_URL;
             var node = document.createTextNode("Download");
             _link.appendChild(node);
             document.write(_link.outerHTML);
